Added navbar and implemented the smooth scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,6 +135,7 @@ p {
   letter-spacing: var(--spacing);
   display: inline-block;
   /* font-weight: 700; */
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   font-size: 0.875rem;
   border: 2px solid transparent;
@@ -168,11 +169,106 @@ p {
     width: 95vw;
   }
 }
+
 /*
 =============== 
 Navbar
 ===============
 */
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--cor-white);
+  box-shadow: var(--dark-shadow);
+  z-index: 2;
+}
+.nav-center {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+.nav-header {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  padding: 1rem 2rem;
+}
+.nav-toggle {
+  background: transparent;
+  border: transparent;
+  font-size: 1.5rem;
+  color: var(--cor-prim-5);
+  cursor: pointer;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+.nav-toggle:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.nav-link {
+  display: block;
+  padding: 1rem 2rem;
+  letter-spacing: var(--spacing);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+  color: var(--cor-grey-1);
+  cursor: pointer;
+  font-size: 1rem;
+}
+.nav-link:hover {
+  color: var(--cor-prim-1);
+  background-color: var(--cor-prim-8);
+  padding-left: 2.25rem;
+}
+.nav-links {
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+.show-links {
+  height: 280px;
+}
+@media screen and (min-width: 992px) {
+  .navbar {
+    padding: 1rem 2rem;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .nav-center {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .nav-links {
+    height: auto;
+    display: -webkit-box;
+    display: flex;
+  }
+  .nav-header {
+    padding: 0 0;
+  }
+  .nav-link {
+    padding: 0 0;
+    margin-right: 0.7rem;
+  }
+  .nav-link:hover {
+    padding: 0;
+    color: var(--cor-white);
+    background-color: transparent;
+  }
+}
 /*
 =============== 
 Hero
@@ -181,8 +277,11 @@ Hero
 .hero {
   min-height: 100vh;
   background-color: var(--cor-prim-5);
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
   align-items: center;
 }
 .hero-banner {
@@ -213,6 +312,14 @@ Hero
 }
 @media screen and (min-width: 767px) {
   .hero {
+    background: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        from(rgb(44, 174, 186, 0.25)),
+        to(rgba(0, 0, 0, 0.7))
+      ),
+      url(../images/hero.jpg) center/cover no-repeat;
     background: linear-gradient(rgb(44, 174, 186, 0.25), rgba(0, 0, 0, 0.7)),
       url(../images/hero.jpg) center/cover no-repeat;
   }
@@ -234,12 +341,15 @@ About
 }
 @media screen and (min-width: 992px) {
   .about-center {
+    display: -webkit-box;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     flex-wrap: wrap;
   }
   .about-info,
   .about-img {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(50% - 2rem);
     margin-bottom: 0;
     align-self: center;
@@ -290,22 +400,27 @@ Services
 }
 @media screen and (min-width: 576px) {
   .services-center {
+    display: -webkit-box;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     flex-wrap: wrap;
   }
   .service {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(50% - 1rem);
     margin-bottom: 1rem;
   }
 }
 @media screen and (min-width: 992px) {
   .service {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(33.33% - 1rem);
   }
 }
 @media screen and (min-width: 1170px) {
   .service {
+    display: -webkit-box;
     display: flex;
     text-align: left;
   }
@@ -325,13 +440,16 @@ Destinos
 ===============
 */
 .tour-card {
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   background-color: var(--cor-grey-10);
   box-shadow: var(--light-shadow);
   margin-bottom: 2rem;
+  border-radius: 0.5rem;
 }
 .tour-card:hover {
   box-shadow: var(--dark-shadow);
+  -webkit-transform: scale(1.02);
   transform: scale(1.02);
 }
 .tour-img-container {
@@ -339,7 +457,10 @@ Destinos
 }
 .destino-img {
   height: 15rem;
+  -o-object-fit: cover;
   object-fit: cover;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 .tour-date {
   position: absolute;
@@ -355,9 +476,12 @@ Destinos
   padding: 1.25rem 1.5rem;
 }
 .tour-footer {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: justify;
   justify-content: space-between;
   flex-wrap: wrap;
+  -webkit-box-align: center;
   align-items: center;
 }
 .tour-footer p {
@@ -371,16 +495,20 @@ Destinos
 }
 @media screen and (min-width: 768px) {
   .featured-center {
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
+    -webkit-box-pack: justify;
     justify-content: space-between;
   }
   .tour-card {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(50% - 2rem);
   }
 }
 @media screen and (min-width: 1170px) {
   .tour-card {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(33.33% - 2rem);
   }
 }
@@ -399,10 +527,12 @@ Contact
   color: var(--cor-prim-9);
 }
 .contact-form {
+  display: -webkit-box;
   display: flex;
   max-width: 28rem;
 }
 .form-control {
+  -webkit-box-flex: 1;
   flex: 1 1 auto;
   color: var(--cor-grey-5);
 }
@@ -417,6 +547,18 @@ Contact
   text-transform: capitalize;
   border: transparent;
 }
+.form-control::-webkit-input-placeholder {
+  color: inherit;
+}
+.form-control::-moz-placeholder {
+  color: inherit;
+}
+.form-control:-ms-input-placeholder {
+  color: inherit;
+}
+.form-control::-ms-input-placeholder {
+  color: inherit;
+}
 .form-control::placeholder {
   color: inherit;
 }
@@ -426,6 +568,7 @@ Contact
   background: var(--cor-prim-9);
   color: var(--cor-prim-1);
   cursor: pointer;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .btn-submit:hover {
@@ -434,12 +577,15 @@ Contact
 }
 @media screen and (min-width: 992px) {
   .contact-center {
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
+    -webkit-box-pack: justify;
     justify-content: space-between;
   }
   .contact-form {
     align-self: flex-start;
+    -webkit-box-flex: 1;
     flex: 1 1 auto;
   }
 }
@@ -457,15 +603,19 @@ Gallery
   top: 50%;
   left: 50%;
   font-size: 2rem;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   color: var(--cor-white);
   opacity: 0;
   cursor: pointer;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .gallery-img {
   height: 17rem;
+  -o-object-fit: cover;
   object-fit: cover;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .gallery-img-container:hover .gallery-img {
@@ -476,15 +626,18 @@ Gallery
 }
 @media screen and (min-width: 768px) {
   .gallery-center {
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
   }
   .gallery-img-container {
+    -webkit-box-flex: 0;
     flex: 0 0 50%;
   }
 }
 @media screen and (min-width: 992px) {
   .gallery-img-container {
+    -webkit-box-flex: 0;
     flex: 0 0 25%;
   }
 }
@@ -501,7 +654,9 @@ Footer
 }
 .footer-links,
 .footer-icons {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
   margin: bottom 1.5rem;
   flex-wrap: wrap;
@@ -511,6 +666,7 @@ Footer
   font-size: 1rem;
   margin-right: 1rem;
   letter-spacing: var(--spacing);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .footer-link:hover {
@@ -520,6 +676,7 @@ Footer
   font-size: 2rem;
   margin-right: 1rem;
   color: var(--cor-prim-8);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .footer-icon:hover {
